# filecache

./: .git-blame-ignore-revs  .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml  test_publish.yml
examples/: .gitignore  dummy_function.py  file_cacher.ipynb  function_cacher.ipynb
src/: abstract_cache.py  abstract_cacher.py  deque_cache.py  exceptions.py  file_cache.py  file_cacher.py  function_cache.py  function_cacher.py  json_cache.py  json_cacher.py  shelve_cache.py  shelve_cacher.py  typing.py
src/filecache/: abstract_cacher.py  deque_cache.py  file_cacher.py  function_cacher.py  invalidation_dict.py  json_cacher.py  shelve_cacher.py
src/filecache/mixin/: abstract_cache_comparison.py
src/filecache/utils/: inspect.py  path.py  shelve.py
src/mixin/: abstract_cache_comparison.py
src/utils/: compare.py  dict.py  inspect.py  path.py  shelve.py  string.py
tests/: test_deque_cache.py  test_file_cacher.py  test_function_cache.py  test_function_cacher.py  test_invalidation_dict.py
tests/utils/: test_compare.py  test_inspect.py  test_shelve.py
