[project]
name = "FileCache"
version = "0.1.0"
description = "Various caching utilities"
authors = [
    {name = "Topi Aaltonen", email = "aaltopi@gmail.com"},
]
dependencies = [
]
requires-python = "==3.12.5"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false


[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
]
