[project]
name = "filecacheutils"
version = "0.1.0"
description = "Various caching utilities"
authors = [
    {name = "Topi Aaltonen", email = "aaltopi@gmail.com"},
]
dependencies = [
]
requires-python = ">=3.13.3"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend >= 2.4.4"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
]
